--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
     "lint:fix": "eslint . --ext .ts,.tsx,.js,.jsx --fix",
@@ -18,13 +18,16 @@
     "expo": "~53.0.20",
     "expo-av": "^15.1.7",
     "expo-camera": "^16.1.11",
+    "expo-media-library": "~17.1.7",
     "expo-status-bar": "~2.2.3",
+    "onnxruntime-react-native": "^1.19.0",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-fs": "^2.20.0",
     "react-native-mediapipe": "^0.6.0",
-    "expo-media-library": "~17.1.7",
-    "onnxruntime-react-native": "^1.19.0"
+    "react-native-vision-camera": "^4.7.1",
+    "react-native-worklets-core": "^1.6.2",
+    "react-native-reanimated": "~3.17.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
