--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -174,4 +174,8 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    // MediaPipe Tasks Vision + CameraX core for ImageProxy
+    implementation("com.google.mediapipe:tasks-vision:0.10.14")
+    implementation("androidx.camera:camera-core:1.3.4")
 }
