--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
+    "android:reinstall": "cd android && adb uninstall com.anonymous.yawndetector || true && ./gradlew app:installDebug -PreactNativeArchitectures=arm64-v8a && adb reverse tcp:8081 tcp:8081 && adb shell am start -n com.anonymous.yawndetector/.MainActivity",
+    "dev": "npm run android:reinstall && expo start --dev-client",
     "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
