--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
-    "android:reinstall": "cd android && adb uninstall com.anonymous.yawndetector || true && ./gradlew app:installDebug -PreactNativeArchitectures=arm64-v8a && adb reverse tcp:8081 tcp:8081 && adb shell am start -n com.anonymous.yawndetector/.MainActivity",
+    "android:reinstall": "cd android && gradlew.bat app:installDebug -PreactNativeArchitectures=arm64-v8a && adb reverse tcp:8081 tcp:8081 && adb shell am start -n com.anonymous.yawndetector/.MainActivity",
     "dev": "npm run android:reinstall && expo start --dev-client",
+    "android:adb:reset": "adb kill-server && adb start-server && adb wait-for-device && adb reconnect",
+    "android:uninstall": "adb uninstall com.anonymous.yawndetector || true",
+    "android:clean": "cd android && gradlew.bat clean",
+    "android:fix-install": "npm run android:adb:reset && npm run android:uninstall && npm run android:clean && cd android && gradlew.bat app:installDebug -PreactNativeArchitectures=arm64-v8a && adb reverse tcp:8081 tcp:8081 && adb shell am start -n com.anonymous.yawndetector/.MainActivity",
+    "dev:repair": "npm run android:fix-install && expo start --dev-client",
     "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
